Add Donation Page to site publicly

--- a/donate.html
+++ b/donate.html
@@ -54,25 +54,25 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item-test d-sm-block d-lg-none">
+                    <li class="nav-item d-sm-block d-lg-none">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item-test">
+                    <li class="nav-item">
                         <a class="nav-link" href="modules.html">Modules</a>
                     </li>
-                    <li class="nav-item-test">
+                    <li class="nav-item">
                         <a class="nav-link" href="for_educators.html">For Educators</a>
                     </li>
-                    <li class="nav-item-test">
+                    <li class="nav-item">
                         <a class="nav-link" href="for_parents.html">For Parents</a>
                     </li>
-                    <li class="nav-item-test">
+                    <li class="nav-item">
                         <a class="nav-link" href="research.html">Research</a>
                     </li>
-                    <li class="nav-item-test">
+                    <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
                     </li>
-                    <li class="nav-item-test">
+                    <li class="nav-item">
                         <a class="nav-link alignItemsCenter" href="donate.html">
                             <!-- Free, open source bootstrap icon: megaphone fill -->
                             <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
@@ -105,7 +105,7 @@
                     <h4>
                         Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and
                         developers at Cornell University's
-                        <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab</a>
+                        <a href="https://socialmedialab.cornell.edu/translational-activities/" target="_blank"> Social Media Lab</a>
                         in collaboration with
                         <a href="https://www.commonsense.org/education/social-media-test-drive" target="_blank">Common Sense Education</a>.
                         <br><br> It is a free resource, so we invite your support to fund its continual operation
