--- a/index.html
+++ b/index.html
@@ -69,20 +69,19 @@
           <li class="nav-item">
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="donate.html" > -->
+          <li class="nav-item">
+            <a class="nav-link alignItemsCenter" href="donate.html">
               <!-- Free, open source bootstrap icon: megaphone fill -->
               <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
               <!-- Altered the width, height, and fill -->
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-              </svg> -->
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
-                <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
+                class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
+                <path
+                  d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
               </svg>
               <b>Donate</b>
             </a>
-          </li> -->
+          </li>
         </ul>
 
       </div>
