--- a/team2.html
+++ b/team2.html
@@ -71,8 +71,20 @@
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link alignItemsCenter" href="donate.html">
+                            <!-- Free, open source bootstrap icon: megaphone fill -->
+                            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
+                            <!-- Altered the width, height, and fill -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
+                                class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
+                                <path
+                                    d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
+                            </svg>
+                            <b>Donate</b>
+                        </a>
+                    </li>
                 </ul>
-
             </div>
         </nav>
     </header>
@@ -206,7 +218,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen Zou</a>
+                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen
+                                Zou</a>
                             is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris.
@@ -221,7 +234,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a> is lorem
+                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a>
+                            is lorem
                             ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim
                             veniam, quis nostrud exercitation ullamco laboris.
@@ -236,7 +250,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:wh394@cornell.edu" target="_blank" class="noDecorationText"> Winice Hui</a> is the TestDrive
+                            <a href="mailto:wh394@cornell.edu" target="_blank" class="noDecorationText"> Winice Hui</a>
+                            is the TestDrive
                             application developer. She is currently an Applications Programmer in the Department of
                             Communication at Cornell University.
                         </p>
