--- a/faq.html
+++ b/faq.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/faq.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
@@ -22,11 +24,11 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-145467622-3');
+    gtag('config', 'UA-145467622-3');
   </script>
   <title>TestDrive FAQ</title>
 </head>
@@ -36,17 +38,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html" class="logoLinkContainer">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px"
-        class="d-inline-block align-top testDriveLogo"
-        alt="Social Media TestDrive Logo">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo"
+          alt="Social Media TestDrive Logo">
         <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
         </span>
       </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -69,8 +69,20 @@
           <li class="nav-item">
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link alignItemsCenter" href="donate.html">
+              <!-- Free, open source bootstrap icon: megaphone fill -->
+              <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
+              <!-- Altered the width, height, and fill -->
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
+                class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
+                <path
+                  d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
+              </svg>
+              <b>Donate</b>
+            </a>
+          </li>
         </ul>
-
       </div>
     </nav>
   </header>
@@ -89,25 +101,22 @@
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
           <!-- Tab 1 -->
           <li class="nav-item">
-            <a class="nav-link active" id="pills-general-tab" data-toggle="pill"
-            href="#pills-general" role="tab" aria-controls="pills-general"
-            aria-selected="true">
+            <a class="nav-link active" id="pills-general-tab" data-toggle="pill" href="#pills-general" role="tab"
+              aria-controls="pills-general" aria-selected="true">
               General
             </a>
           </li>
           <!-- Tab 2 -->
           <li class="nav-item">
-            <a class="nav-link" id="pills-educators-tab" data-toggle="pill"
-            href="#pills-educators" role="tab" aria-controls="pills-educators"
-            aria-selected="false">
+            <a class="nav-link" id="pills-educators-tab" data-toggle="pill" href="#pills-educators" role="tab"
+              aria-controls="pills-educators" aria-selected="false">
               Educators
             </a>
           </li>
           <!-- Tab 3 -->
           <li class="nav-item">
-            <a class="nav-link" id="pills-parents-tab" data-toggle="pill"
-            href="#pills-parents" role="tab" aria-controls="pills-parents"
-            aria-selected="false">
+            <a class="nav-link" id="pills-parents-tab" data-toggle="pill" href="#pills-parents" role="tab"
+              aria-controls="pills-parents" aria-selected="false">
               Parents
             </a>
           </li>
@@ -203,7 +212,7 @@
                 </p>
                 <p>
                   <a href="https://app.socialmediatestdrive.org/privacy" target="_none">
-                  Our privacy policy</a>  gives more details.
+                    Our privacy policy</a> gives more details.
                 </p>
               </div>
               <div class="col-md-6 rightSide">
@@ -232,7 +241,7 @@
                   If you have any questions about Social Media TestDrive or run into any
                   problems while using it, please e-mail us at
                   <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
-                  socialmediatestdrive@gmail.com</a>
+                    socialmediatestdrive@gmail.com</a>
                   or Contact Us below. We will do our best to respond within 1–2
                   business days of receiving your e-mail.
                 </p>
@@ -304,7 +313,7 @@
                   If you have any questions about Social Media TestDrive or run into any
                   problems while using it, please e-mail us at
                   <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
-                  socialmediatestdrive@gmail.com</a>
+                    socialmediatestdrive@gmail.com</a>
                   or Contact Us below. We will do
                   our best to respond within 1–2 business days of receiving your
                   e-mail.
@@ -399,7 +408,7 @@
                   If you have any questions about Social Media TestDrive or run into any
                   problems while using it, please e-mail us at
                   <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
-                  socialmediatestdrive@gmail.com</a>
+                    socialmediatestdrive@gmail.com</a>
                   or Contact Us below. We will do
                   our best to respond within 1–2 business days of receiving your
                   e-mail.
@@ -474,8 +483,15 @@
   </footer>
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
