--- a/for_educators.html
+++ b/for_educators.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <html lang='en'>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/foreducators.css" media="all">
@@ -23,11 +25,11 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-145467622-3');
+    gtag('config', 'UA-145467622-3');
   </script>
   <title> TestDrive for Educators</title>
 </head>
@@ -36,17 +38,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html" class="logoLinkContainer">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px"
-        class="d-inline-block align-top testDriveLogo"
-        alt="Social Media TestDrive Logo">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo"
+          alt="Social Media TestDrive Logo">
         <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
         </span>
       </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -69,6 +69,19 @@
           <li class="nav-item">
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link alignItemsCenter" href="donate.html">
+              <!-- Free, open source bootstrap icon: megaphone fill -->
+              <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
+              <!-- Altered the width, height, and fill -->
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
+                class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
+                <path
+                  d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
+              </svg>
+              <b>Donate</b>
+            </a>
+          </li>
         </ul>
 
       </div>
@@ -81,20 +94,20 @@
       <!-- Comment out when no longer needed -->
       <!-- <div class="row align-items-center announcementBanner">
         <div class="col-12 d-flex align-items-center"> -->
-          <!-- Free, open source bootstrap icon: circle fill -->
-          <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
-          <!-- Altered the width, height, and fill -->
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
+      <!-- Free, open source bootstrap icon: circle fill -->
+      <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
+      <!-- Altered the width, height, and fill -->
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
             <circle cx="8" cy="8" r="8"/>
           </svg> -->
-          <!-- Free, open source bootstrap icon: megaphone fill -->
-          <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
-          <!-- Altered the width, height, and fill -->
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
+      <!-- Free, open source bootstrap icon: megaphone fill -->
+      <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
+      <!-- Altered the width, height, and fill -->
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
             <path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-11zm-1 .724c-2.067.95-4.539 1.481-7 1.656v6.237a25.222 25.222 0 0 1 1.088.085c2.053.204 4.038.668 5.912 1.56V3.224zm-8 7.841V4.934c-.68.027-1.399.043-2.008.053A2.02 2.02 0 0 0 0 7v2c0 1.106.896 1.996 1.994 2.009a68.14 68.14 0 0 1 .496.008 64 64 0 0 1 1.51.048zm1.39 1.081c.285.021.569.047.85.078l.253 1.69a1 1 0 0 1-.983 1.187h-.548a1 1 0 0 1-.916-.599l-1.314-2.48a65.81 65.81 0 0 1 1.692.064c.327.017.65.037.966.06z"/>
           </svg> -->
-          <!-- Announcement Banner Text -->
-          <!-- <p>
+      <!-- Announcement Banner Text -->
+      <!-- <p>
             <span class="largeText boldText">Help us test TestDrive!</span>
             Use <span class="italicText">Social Media TestDrive</span>
             with your students in the months of
@@ -252,7 +265,7 @@
         <!-- Join List-serv Button -->
         <div class="row addPaddingBottom justify-content-center">
           <div class="col d-flex justify-content-center">
-            <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top"  class="customHyperlink">
+            <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top" class="customHyperlink">
               <button type="button" class="nicelyRoundedButton">
                 Sign up
               </button>
@@ -289,8 +302,15 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
