--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 
 <html lang='en'>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/webinarBanner.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
   <meta name='twitter:card' content="summary">
   <meta name='twitter:title' content="Social Media TestDrive">
   <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
@@ -23,11 +26,11 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-145467622-3');
+    gtag('config', 'UA-145467622-3');
   </script>
   <title>Social Media TestDrive</title>
 </head>
@@ -36,17 +39,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html" class="logoLinkContainer">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px"
-        class="d-inline-block align-top testDriveLogo"
-        alt="Social Media TestDrive Logo">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo"
+          alt="Social Media TestDrive Logo">
         <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
         </span>
       </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -99,6 +100,43 @@
         </div>
       </div> -->
 
+      <!-- Temporary Announcement Banner -->
+      <!-- Comment out when no longer needed -->
+      <div class="row align-items-center announcementBanner">
+        <div class="col-12 d-flex align-items-center flex-column">
+          <!-- Free, open source bootstrap icon: circle fill -->
+          <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
+          <!-- Altered the width, height, and fill -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68"
+            class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
+            <circle cx="8" cy="8" r="8" />
+          </svg>
+          <!-- Free, open source bootstrap icon: megaphone fill -->
+          <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
+          <!-- Altered the width, height, and fill -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white"
+            class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
+            <path
+              d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-11zm-1 .724c-2.067.95-4.539 1.481-7 1.656v6.237a25.222 25.222 0 0 1 1.088.085c2.053.204 4.038.668 5.912 1.56V3.224zm-8 7.841V4.934c-.68.027-1.399.043-2.008.053A2.02 2.02 0 0 0 0 7v2c0 1.106.896 1.996 1.994 2.009a68.14 68.14 0 0 1 .496.008 64 64 0 0 1 1.51.048zm1.39 1.081c.285.021.569.047.85.078l.253 1.69a1 1 0 0 1-.983 1.187h-.548a1 1 0 0 1-.916-.599l-1.314-2.48a65.81 65.81 0 0 1 1.692.064c.327.017.65.037.966.06z" />
+          </svg>
+          <!-- announcement Banner Text -->
+          <!-- Show only when screen is sm or smaller -->
+          <div class="col-12 d-flex d-sm-none justify-content-center align-items-center">
+            <img class="sm-img" src="img/giving_tuesday.png" alt="Logo of Giving Tuesday" height="65px">
+          </div>
+          <div class="col-12 d-flex align-items-center justify-content-center">
+            <!-- Hide when screen is sm or smaller -->
+            <img class="d-none d-sm-block md-img" src="img/giving_tuesday.png" alt="" height="65px">
+            <p>
+              It's <span class="boldText">#GivingTuesday</span> this <span class="boldText">upcoming Tuesday, 
+              November 30, 2021</span>! Join us on this national day of giving, by donating to TestDrive and supporting our
+              mission to prepare young people for the online world! <span class="boldText">Make a gift 
+              <a href="donate.html">here</a>.</span>
+            </p>
+          </div>
+        </div>
+      </div>
+
       <!-- Top Content Row -->
       <div class="row paddedRow align-items-center">
         <div id="intro" class="col-md-6">
@@ -135,8 +173,8 @@
 
       <!-- Three Mission Items -->
       <!-- <div class="row justify-content-center" style="padding-bottom:3em;"> -->
-        <!-- Item 1 -->
-        <!-- <div class="col-md-4 text-center">
+      <!-- Item 1 -->
+      <!-- <div class="col-md-4 text-center">
           <img class="trioImage" src="img/home_safety.svg">
           <h1 class="trioTitle">Safety first</h1>
           <h4 class="trioSubtitle">
@@ -144,8 +182,8 @@
             behavior without real-life consequences.
           </h4>
         </div> -->
-        <!-- Item 2 -->
-        <!-- <div class="col-md-4 text-center">
+      <!-- Item 2 -->
+      <!-- <div class="col-md-4 text-center">
           <img class="trioImage" src="img/home_essential.svg">
           <h1 class="trioTitle">Essential topics</h1>
           <h4 class="trioSubtitle">
@@ -153,8 +191,8 @@
             online behavior relevant to today’s youth.
           </h4>
         </div> -->
-        <!-- Item 3 -->
-        <!-- <div class="col-md-4 text-center">
+      <!-- Item 3 -->
+      <!-- <div class="col-md-4 text-center">
           <img class="trioImage" src="img/home_free.svg">
           <h1 class="trioTitle">Research-based</h1>
           <h4 class="trioSubtitle">
@@ -175,7 +213,7 @@
             that young people may encounter as they enter the social media world.
           </h4>
           <h4> Each module teaches <strong>essential
-            <a href="/faq.html" class='customHyperlink'>digital citizenship</a> concepts</strong>,
+              <a href="/faq.html" class='customHyperlink'>digital citizenship</a> concepts</strong>,
             covering topics such as privacy, online identities, cyberbullying,
             and more.
           </h4>
@@ -189,7 +227,7 @@
       <!-- Content Row 2 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6 order-2 order-md-1">
-          <img class="margined-right home_product2" src="img/home_3.png" alt ="">
+          <img class="margined-right home_product2" src="img/home_3.png" alt="">
         </div>
         <div class='col-md-6 order-1 order-md-2'>
           <h1>
@@ -198,7 +236,7 @@
           <h4>
             TestDrive is most effective for new social media users or those who
             are likely to enter into the social media world <strong>in the near
-            future.</strong> Our target audience is <strong>middle school-aged youth</strong>,
+              future.</strong> Our target audience is <strong>middle school-aged youth</strong>,
             but we welcome everyone to explore it.
           </h4>
           <h4>
@@ -222,7 +260,8 @@
           </h4>
           <h4>
             Social Media TestDrive’s modules are aligned with
-            <a href="https://www.commonsense.org/education/digital-citizenship/curriculum" target="_none"  class="customHyperlink">
+            <a href="https://www.commonsense.org/education/digital-citizenship/curriculum" target="_none"
+              class="customHyperlink">
               <strong>Common Sense Education's Digital Citizenship Curriculum</strong></a>
             to provide coverage for a wide
             range of topics in digital literacy.
@@ -245,7 +284,7 @@
           </h1>
           <h4>
             Social Media TestDrive modules can be completed from the <strong>comfort of your own
-            home</strong>, and we
+              home</strong>, and we
             <a href="/for_parents.html" class="customHyperlink">encourage parents and guardians</a>
             to try it out with their children.
           </h4>
@@ -282,7 +321,7 @@
       <!-- Join List-serv Button -->
       <div class="row justify-content-center" style="padding-bottom:2em;">
         <div class="col d-flex justify-content-center">
-          <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top"  class="customHyperlink">
+          <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top" class="customHyperlink">
             <button type="button" class="nicelyRoundedButton">
               Sign up
             </button>
@@ -321,8 +360,15 @@
   </footer>
 
   <!--<script src="nav.js"></script>-->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
