Updated Giving Day banner, and added convo-ai research opportunity

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <!-- Hide when screen is sm or smaller -->
             <img class="d-none d-sm-block md-img" src="img/giving_tuesday.png" alt="" height="65px">
             <p>
-              It's <span class="boldText">#GivingTuesday</span> this <span class="boldText">upcoming Tuesday, 
+              It is <span class="boldText">#GivingTuesday TOMORROW</span>, 
               November 30, 2021</span>! Join us on this national day of giving, by donating to TestDrive and supporting our
               mission to prepare young people for the online world! <span class="boldText">Make a gift 
               <a href="donate.html">here</a>.</span>
