--- a/research.html
+++ b/research.html
@@ -161,8 +161,24 @@
           <a href="youth_and_digital_harms_research_opp_educators.pdf?v=2" target="_none" class="customHyperlink">
             please click here</a>,
           or email us at
-          <a href="mailto:techsafety@cornell.eduu" target="_top" class="customHyperlink">
+          <a href="mailto:techsafety@cornell.edu" target="_top" class="customHyperlink">
             techsafety@cornell.edu</a>.
+        </p>
+      </div>
+
+      <!-- Item -->
+      <div class='row researchRow'>
+        <h3 class="researchSectionTitle">
+          December 2021 - February 2022: Artificial Intelligence (AI)-based Conversational Agent study
+        </h3>
+        <br>
+        <p class="researchParagraph">
+          Cornell Social Media Lab is inviting youth and educators to help us build a conversational agent (chatbot) system using artificial intelligence (AI) to teach teenagers how to deal with cyberbullying. Your input into its development will make sure it is relevant and effective for thousands of users all over the world. To learn more about this study and how you can participate, if you are a youth
+          <a href="convoai_research_opp_students.pdf" target="_none" class="customHyperlink"> please click here</a> 
+          and if you are an educator 
+          <a href="convoai_research_opp_educators.pdf" target="_none" class="customHyperlink"> please click here</a>, 
+          or email us at 
+          <a href="mailto:wz434@cornell.edu" target="_top" class="customHyperlink">wz434@cornell.edu</a>.
         </p>
       </div>
     </div>
