Update landing page donation announcement banner

--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
                         <!-- Hide when screen is sm or smaller -->
                         <img class="d-none d-sm-block md-img" src="img/holidays.png" alt="" height="100px">
                         <p>
-                            <span class="boldText">Happy Holidays from TestDrive!</span> As we wrap up 2021, we invite you to consider joining us in our mission to prepare young people for the online world by donating to TestDrive! <span class="boldText">Make a gift
-                            <a href="donate.html">here</a>.</span>
+                            <span class="boldText">Happy New Year from TestDrive!</span> As we welcome in 2022, we invite you to consider joining us this year in our mission to prepare young people for the online world by donating to TestDrive!
+                            <span class="boldText">Make a gift
+                                <a href="donate.html">here</a>.</span>
                         </p>
                     </div>
                 </div>
