Added banner announcing quiz feature, updated 2021-> 2022 and removed new ribbon on modules

--- a/terms.html
+++ b/terms.html
@@ -3,200 +3,173 @@
 <html lang='en'>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
-  <link rel="stylesheet" type="text/css" href="styles/terms.css" media="all">
-  <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
-  <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
-  <meta name='twitter:card' content="summary">
-  <meta name='twitter:title' content="Social Media TestDrive">
-  <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
-  <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-  <meta property='og:url' content='https://socialmediatestdrive.org/'>
-  <meta property='og:title' content="Social Media TestDrive">
-  <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
-  <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/terms.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
+    <meta name='twitter:card' content="summary">
+    <meta name='twitter:title' content="Social Media TestDrive">
+    <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
+    <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
+    <meta property='og:url' content='https://socialmediatestdrive.org/'>
+    <meta property='og:title' content="Social Media TestDrive">
+    <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
+    <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    gtag('config', 'UA-145467622-3');
-  </script>
-  <title>TestDrive Terms</title>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-145467622-3');
+    </script>
+    <title>TestDrive Terms</title>
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a href="index.html" class="logoLinkContainer">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo"
-          alt="Social Media TestDrive Logo">
-        <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a href="index.html" class="logoLinkContainer">
+                <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
+                <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
-        </span>
-      </a>
+                </span>
+            </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item d-sm-block d-lg-none">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="modules.html">Modules</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="for_educators.html">For Educators</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="for_parents.html">For Parents</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="research.html">Research</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="faq.html">FAQ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link alignItemsCenter" href="donate.html">
-              <!-- Free, open source bootstrap icon: megaphone fill -->
-              <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
-              <!-- Altered the width, height, and fill -->
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
-                class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item d-sm-block d-lg-none">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="modules.html">Modules</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="for_educators.html">For Educators</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="for_parents.html">For Parents</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="research.html">Research</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="faq.html">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link alignItemsCenter" href="donate.html">
+                            <!-- Free, open source bootstrap icon: megaphone fill -->
+                            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
+                            <!-- Altered the width, height, and fill -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
                 <path
                   d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
               </svg>
-              <b>Donate</b>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+                            <b>Donate</b>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-  <main>
-    <div class='container-fluid'>
-      <div class='row justify-content-center footerPageTitle'>
-        <h1>
-          Terms of Use
-        </h1>
-      </div>
+    <main>
+        <div class='container-fluid'>
+            <div class='row justify-content-center footerPageTitle'>
+                <h1>
+                    Terms of Use
+                </h1>
+            </div>
 
-      <div class='row termsRow' style="padding-top:3em; padding-bottom:15px;">
+            <div class='row termsRow' style="padding-top:3em; padding-bottom:15px;">
 
-        <h3 class="termsSubheader">
-          Curricula and Lesson Content
-        </h3>
-        <br>
-        <p class="termsParagraph">
-          Curricula and Lesson Content Social Media TestDrive is Copyright ©
-          2017-2020 by Cornell University and the Cornell Research Foundation,
-          Inc. All rights reserved.
-        </p>
+                <h3 class="termsSubheader">
+                    Curricula and Lesson Content
+                </h3>
+                <br>
+                <p class="termsParagraph">
+                    Curricula and Lesson Content Social Media TestDrive is Copyright © 2017-2020 by Cornell University and the Cornell Research Foundation, Inc. All rights reserved.
+                </p>
 
-        <p class="termsParagraph">
-          Permission to use, copy, modify and distribute any part of Social
-          Media TestDrive (“TestDrive”) and its associated copyrights for
-          educational, research and non-profit purposes, without fee, and
-          without a written agreement is hereby granted, provided that the above
-          copyright notice, this paragraph and the following three paragraphs
-          appear in all copies.
-        </p>
+                <p class="termsParagraph">
+                    Permission to use, copy, modify and distribute any part of Social Media TestDrive (“TestDrive”) and its associated copyrights for educational, research and non-profit purposes, without fee, and without a written agreement is hereby granted, provided that
+                    the above copyright notice, this paragraph and the following three paragraphs appear in all copies.
+                </p>
 
-        <p class="termsParagraph">
-          Those desiring to incorporate TestDrive into commercial products or
-          use TestDrive and its associated copyrights for commercial purposes
-          should contact the Center for Technology Licensing at Cornell
-          University at 395 Pine Tree Road, Suite 310, Ithaca, NY 14850; email:
-          ctl-connect@cornell.edu; Tel: 607-254-4698; FAX: 607-254-5454 for a
-          commercial license.
-        </p>
+                <p class="termsParagraph">
+                    Those desiring to incorporate TestDrive into commercial products or use TestDrive and its associated copyrights for commercial purposes should contact the Center for Technology Licensing at Cornell University at 395 Pine Tree Road, Suite 310, Ithaca,
+                    NY 14850; email: ctl-connect@cornell.edu; Tel: 607-254-4698; FAX: 607-254-5454 for a commercial license.
+                </p>
 
-        <p class="termsParagraph">
-          IN NO EVENT SHALL THE CORNELL RESEARCH FOUNDATION, INC. AND CORNELL
-          UNIVERSITY BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT, SPECIAL,
-          INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS, ARISING
-          OUT OF THE USE OF WORK AND ITS ASSOCIATED COPYRIGHTS, EVEN IF THE
-          CORNELL RESEARCH FOUNDATION, INC. AND CORNELL UNIVERSITY MAY HAVE
-          BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-        </p>
+                <p class="termsParagraph">
+                    IN NO EVENT SHALL THE CORNELL RESEARCH FOUNDATION, INC. AND CORNELL UNIVERSITY BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS, ARISING OUT OF THE USE OF WORK AND ITS ASSOCIATED COPYRIGHTS,
+                    EVEN IF THE CORNELL RESEARCH FOUNDATION, INC. AND CORNELL UNIVERSITY MAY HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+                </p>
 
-        <p class="termsParagraph">
-          THE WORK PROVIDED HEREIN IS ON AN "AS IS" BASIS, AND THE CORNELL
-          RESEARCH FOUNDATION, INC. AND CORNELL UNIVERSITY HAVE NO OBLIGATION
-          TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR
-          MODIFICATIONS. THE CORNELL RESEARCH FOUNDATION, INC. AND CORNELL
-          UNIVERSITY MAKE NO REPRESENTATIONS AND EXTEND NO WARRANTIES OF ANY
-          KIND, EITHER IMPLIED OR EXPRESS, INCLUDING, BUT NOT LIMITED TO, THE
-          IMPLIED WARRANTIES OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR
-          PURPOSE, OR THAT THE USE OF WORK AND ITS ASSOCIATED COPYRIGHTS WILL
-          NOT INFRINGE ANY PATENT, TRADEMARK OR OTHER RIGHTS.
-        </p>
+                <p class="termsParagraph">
+                    THE WORK PROVIDED HEREIN IS ON AN "AS IS" BASIS, AND THE CORNELL RESEARCH FOUNDATION, INC. AND CORNELL UNIVERSITY HAVE NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS. THE CORNELL RESEARCH FOUNDATION, INC. AND CORNELL
+                    UNIVERSITY MAKE NO REPRESENTATIONS AND EXTEND NO WARRANTIES OF ANY KIND, EITHER IMPLIED OR EXPRESS, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE, OR THAT THE USE OF WORK
+                    AND ITS ASSOCIATED COPYRIGHTS WILL NOT INFRINGE ANY PATENT, TRADEMARK OR OTHER RIGHTS.
+                </p>
 
-        <h3 class="termsSubheader2">
-          Software
-        </h3>
-        <br>
-        <p class="termsParagraph">
-          The code used to run the TestDrive platform is licensed under the
-          <a href="https://opensource.org/licenses/MIT" target="_blank">
+                <h3 class="termsSubheader2">
+                    Software
+                </h3>
+                <br>
+                <p class="termsParagraph">
+                    The code used to run the TestDrive platform is licensed under the
+                    <a href="https://opensource.org/licenses/MIT" target="_blank">
             MIT License.
           </a>
-        </p>
+                </p>
 
-      </div>
+            </div>
 
-    </div>
-  </main>
+        </div>
+    </main>
 
-  <footer class="page-footer footerVerB">
-    <div class="container-fluid">
-      <div class="row align-items-center footerRow">
-        <div class="col-auto mr-auto">
-          <p class="footerLeftItem">Copyright &copy 2021 Social Media TestDrive</p>
-        </div>
-        <div class="col-auto">
-          <a href="team.html" class="footer-link">Team</a>
-        </div>
-        <div class="col-auto">
-          <a href="press.html" class="footer-link">Press</a>
-        </div>
-        <div class="col-auto">
-          <a href="terms.html" class="footer-link">Terms & Copyright</a>
-        </div>
-        <div class="col-auto">
-          <a href="https://app.socialmediatestdrive.org/privacy" class="footer-link">Privacy Policy</a>
-        </div>
-        <div class="col-auto">
-          <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
+    <footer class="page-footer footerVerB">
+        <div class="container-fluid">
+            <div class="row align-items-center footerRow">
+                <div class="col-auto mr-auto">
+                    <p class="footerLeftItem">Copyright &copy 2022 Social Media TestDrive</p>
+                </div>
+                <div class="col-auto">
+                    <a href="team.html" class="footer-link">Team</a>
+                </div>
+                <div class="col-auto">
+                    <a href="press.html" class="footer-link">Press</a>
+                </div>
+                <div class="col-auto">
+                    <a href="terms.html" class="footer-link">Terms & Copyright</a>
+                </div>
+                <div class="col-auto">
+                    <a href="https://app.socialmediatestdrive.org/privacy" class="footer-link">Privacy Policy</a>
+                </div>
+                <div class="col-auto">
+                    <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
             Contact Us
           </a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
