--- a/donate.html
+++ b/donate.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/webinarBanner.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/donate.css" media="all">
@@ -41,15 +40,13 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <a href="index.html" class="logoLinkContainer">
-                <img src="/img/testDriveLogo.svg" width="110px" height="110px"
-                    class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
+                <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
                 <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
                     Test<span class="brand">Drive</span>
                 </span>
             </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -77,8 +74,7 @@
                             <!-- Free, open source bootstrap icon: megaphone fill -->
                             <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
                             <!-- Altered the width, height, and fill -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
-                                class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
                                 <path
                                     d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
                             </svg>
@@ -103,18 +99,14 @@
                         <span class="blue_accent">social media literacy</span>
                     </h1>
                     <h4>
-                        Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and
-                        developers at Cornell University's
-                        <a href="https://socialmedialab.cornell.edu/translational-activities/" target="_blank"> Social Media Lab</a>
-                        in collaboration with
+                        Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and developers at Cornell University's
+                        <a href="https://socialmedialab.cornell.edu/translational-activities/" target="_blank"> Social Media Lab</a> in collaboration with
                         <a href="https://www.commonsense.org/education/social-media-test-drive" target="_blank">Common Sense Education</a>.
-                        <br><br> It is a free resource, so we invite your support to fund its continual operation
-                        and addition of new features. 
-                        <br><br> 
+                        <br><br> It is a free resource, so we invite your support to fund its continual operation and addition of new features.
+                        <br><br>
                         <b>Join us in supporting our mission to prepare young people for the online world! </b>
                     </h4>
-                    <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
-                        target="_blank">
+                    <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1' target="_blank">
                         <button class="donationButton" type="button">
                             Make a donation
                             <br>
@@ -131,7 +123,7 @@
         <div class="container-fluid">
             <div class="row align-items-center footerRow">
                 <div class="col-auto mr-auto">
-                    <p class="footerLeftItem">Copyright &copy 2021 Social Media TestDrive</p>
+                    <p class="footerLeftItem">Copyright &copy 2022 Social Media TestDrive</p>
                 </div>
                 <div class="col-auto">
                     <a href="team.html" class="footer-link">Team</a>
@@ -155,15 +147,9 @@
     </footer>
 
     <!--<script src="nav.js"></script>-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
