Minor update to site

--- a/team.html
+++ b/team.html
@@ -134,7 +134,7 @@
                         Center for Translational Research and a graduate student in the Department of Communication at Cornell University.
                     </p>
                     <p class="teamText">
-                        Anna Spring. Ms. Spring is the TestDrive application developer. She is an Applications Programmer in the Department of Communication at Cornell University.
+                        Winice Hui. Ms. Hui is the TestDrive application developer. She is an Applications Programmer in the Department of Communication at Cornell University.
                     </p>
                     <p class="teamText">
                         Dr. Dan Cosley. Dr. Cosley provides support for the design and content development of the TestDrive project.
@@ -180,7 +180,7 @@
                         Website Development
                     </h3>
                     <p class="teamText">
-                        Michael Huang, Anna Spring
+                        Michael Huang, Anna Spring, Winice Hui
                     </p>
                 </div>
 
