Add possible updates, Update convo-ai details on research page

--- a/for_parents.html
+++ b/for_parents.html
@@ -98,16 +98,14 @@
                     </h4>
                     <a href="/modules.html" style="text-decoration:none;">
                         <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
-              Try it out
-            </button>
+                        Try it out
+                        </button>
                     </a>
-                    <!-- <a 
-          href="https://www.youtube.com/watch?v=cWiI5s2bVws&ab_channel=SocialMediaTestDrive" target="_none" 
-          style="text-decoration:none;" >
-          <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
-            View informational video
-          </button>
-        </a> -->
+                    <!-- <a href="https://www.youtube.com/watch?v=cWiI5s2bVws&ab_channel=SocialMediaTestDrive" target="_none" style="text-decoration:none;">
+                        <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
+                            Learn more
+                        </button>
+                    </a> -->
                 </div>
                 <div class='col-md-6'>
                     <img class="educators_image" src="img/parents_1.svg" alt="">
@@ -142,10 +140,10 @@
                 </div>
                 <div class="col-md-6 order-2 order-md-2">
                     <video class="smtd_vid" controls poster="img/parents_3.png" preload="none">
-            <source src="img/smtd_pdvideo_long.mp4" type="video/mp4">
-            <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
-            Your browser does not support the video element. Kindly update it to latest version.
-          </video>
+                        <source src="img/smtd_pdvideo_long.mp4" type="video/mp4">
+                        <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
+                        Your browser does not support the video element. Kindly update it to latest version.
+                    </video>
                     <!-- <p class="smtd_vid_caption"> Click to watch video</p> -->
                     <!-- <iframe width="100%" height="361" src="https://www.youtube.com/embed/cWiI5s2bVws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 </div>
