--- a/research.html
+++ b/research.html
@@ -151,7 +151,7 @@
             <!-- Item -->
             <div class='row researchRow'>
                 <h3 class="researchSectionTitle">
-                    December 2021 - February 2022: Artificial Intelligence (AI)-based Conversational Agent study
+                    Spring 2022: Artificial Intelligence (AI)-based Conversational Agent study
                 </h3>
                 <br>
                 <p class="researchParagraph">
