Quick change -- load video metadata, not entire video

--- a/index2.html
+++ b/index2.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="modal-body">
                             <p> Watch this <b>video</b> created by <b>Common Sense Education</b> to learn more about the Social Media TestDrive platform and modules.</p>
-                            <video class="smtd_vid" controls poster="img/home_5.png" preload="none" id="CS_video">
+                            <video class="smtd_vid" controls poster="img/home_5.png" preload="metadata" id="CS_video">
                                 <source src="img/smtd_pdvideo_long.mp4" type="video/mp4">
                                 <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
                                 Your browser does not support the video element. Kindly update it to latest version.
@@ -192,7 +192,7 @@
 
                 </div>
                 <div class='col-md-6'>
-                    <video class="smtd_vid" controls poster="img/parents_3.png" preload="none">
+                    <video class="smtd_vid" controls poster="img/parents_3.png" preload="metadata">
                         <source src="img/smtd_pdvideo_long.mp4" type="video/mp4">
                         <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
                         Your browser does not support the video element. Kindly update it to latest version.
