Update home page video, home/educator page banner, and research study dates

--- a/for_educators.html
+++ b/for_educators.html
@@ -108,11 +108,10 @@
           </svg>
                     <!-- Announcement Banner Text -->
                     <p>
-                        <span class="largeText boldText">Help us improve TestDrive!</span> Join us to build a conversational agent (chatbot) system using artificial intelligence (AI) to make
-                        <span class="italicText">TestDrive</span> more fun and engaging! You will receive up to
-                        <span class="boldText">$75 Amazon gift card</span> for your participation. Please
-                        <a href="mailto:wz434@cornell.edu" target="_top" class="customHyperlink">contact us</a> to learn more! You can also find more information
-                        <a href="convoai_research_opp_educators.pdf" target="_none">here</a>.
+                        <span class="largeText boldText">NOW recruiting!</span> Help us learn how well social media works! As a thank you, you will receive a
+                        <span class="boldText">$75 Amazon egift card</span>. Contact
+                        <a href="mailto:smtdevaluation@gmail.com" target="_top" class="customHyperlink">smtdevaluation@gmail.com</a> to learn more! You can also find more information
+                        <a href="Social Media TestDrive research opp.pdf" target="_none">here</a>.
                     </p>
                 </div>
             </div>
