--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
             <!-- Item -->
             <div class='row researchRow'>
                 <h3 class="researchSectionTitle">
-                    Fall 2021: Knowledge Outcome Evaluation study
+                    Spring 2022: Knowledge Outcome Evaluation study
                 </h3>
                 <br>
                 <p class="researchParagraph">
@@ -134,7 +134,7 @@
             <!-- Item -->
             <div class='row researchRow'>
                 <h3 class="researchSectionTitle">
-                    November 2021 - February 2022: Youth Tech Safety study
+                    Spring 2022: Youth Tech Safety study
                 </h3>
                 <br>
                 <p class="researchParagraph">
