Fix banner text

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </svg>
                     <!-- Announcement Banner Text -->
                     <p>
-                        <span class="largeText boldText">NOW recruiting!</span> Help us learn how well social media works! As a thank you, you will receive a
+                        <span class="largeText boldText">NOW recruiting!</span> Help us learn how well Social Media TestDrive works! As a thank you, you will receive a
                         <span class="boldText">$75 Amazon egift card</span>. Contact
                         <a href="mailto:smtdevaluation@gmail.com" target="_top" class="customHyperlink">smtdevaluation@gmail.com</a> to learn more! You can also find more information
                         <a href="Social Media TestDrive research opp.pdf" target="_none">here</a>.
