--- a/team2.html
+++ b/team2.html
@@ -168,10 +168,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:ald17@cornell.edu" target="_blank" class="noDecorationText">
-                                Amanda Purington</a> contributes to content development and is conducting an outcome Amanda Purington</a> contributes to content development and is conducting an outcome Amanda Purington</a>
-                            contributes to content development and is conducting an outcome evaluation on TestDrive as part of her doctorate in Communication. She is the Director of Evaluation and Research at ACT for Youth project in the Bronfenbrenner
-                            Center for Translational Research and a graduate student in the Department of Communication at Cornell University.
+                            <a href="mailto:ald17@cornell.edu" target="_blank" class="noDecorationText">Amanda Purington</a> contributes to content development and is conducting an outcome evaluation on TestDrive as part of her doctorate in Communication.
+                            She is the Director of Evaluation and Research at ACT for Youth project in the Bronfenbrenner Center for Translational Research and a graduate student in the Department of Communication at Cornell University.
                         </p>
                     </div>
                 </div>
